--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   "description": "",
   "dependencies": {
     "chalk": "^4.1.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1"
   },
   "devDependencies": {
